--- a/src/components/HomeHeader.css
+++ b/src/components/HomeHeader.css
@@ -8,9 +8,14 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	line-height: 100px;
 }
 
 .header-content {
 	width: 1170px;
 	margin: 0 auto;
+}
+
+.header-content .ant-btn{
+	border-radius: 0px;
 }
