--- a/src/components/SearchBanner.css
+++ b/src/components/SearchBanner.css
@@ -14,19 +14,23 @@
   float: right;
 }
 
-.sort-tab .ant-radio-button-wrapper{
+.sort-tab .ant-radio-button-wrapper {
   border-start-start-radius: 0px;
   border-end-start-radius: 0px;
   border-start-end-radius: 0px;
   border-end-end-radius: 0px;
 }
 
-.search-area .ant-input {
+.search-area .ant-input{
   border-radius: 0px;
 }
 
-.search-area .ant-input-search-butto {
-  border-start-end-radius: 0px;
-  border-end-end-radius: 0px;
+.search-area .ant-input-group-addon {
+  border-radius: 0px;
+}
+
+.search-area .ant-input-search-button {
+  border-start-end-radius: 0px !important;
+  border-end-end-radius: 0px !important;
   border-radius: 0px;
 }
