--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,22 @@
-.ant-list .ant-list-item {
+.schema-loadmore-list .ant-list-item {
 	padding: 0 0 20px 0;
 	/* background-color: rgb(254, 254, 254); */
+}
+
+.schema-loadmore-list {
+	min-height: 350px;
+}
+
+.schema-loadmore-list .ant-btn {
+	border-radius: 0px;
+}
+
+.schema-loadmore-list .visible-more {
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.schema-loadmore-list .unvisible-more {
+	display: none;
 }
