--- a/src/components/SearchBanner.css
+++ b/src/components/SearchBanner.css
@@ -1,32 +1,32 @@
 .search-banner {
-  height: 40px;
-  margin: 20px 0 0 0;
-  display: flex;
+	height: 40px;
+	margin: 20px 0 0 0;
+	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
 .sort-tab {
-  float: left;
+	float: left;
 }
 
 .search-area {
-  float: right;
+	float: right;
 }
 
 .sort-tab .ant-radio-button-wrapper {
-  border-start-start-radius: 0px;
-  border-end-start-radius: 0px;
-  border-start-end-radius: 0px;
-  border-end-end-radius: 0px;
+	border-start-start-radius: 0px;
+	border-end-start-radius: 0px;
+	border-start-end-radius: 0px;
+	border-end-end-radius: 0px;
 }
 
-.search-area .ant-input{
-  border-radius: 0px;
+.search-area .ant-input {
+	border-radius: 0px;
 }
 
 .search-area .ant-input-group-addon {
-  border-radius: 0px;
+	border-radius: 0px;
 }
 
 /* .search-area .ant-input-search-button {
@@ -35,8 +35,12 @@
   border-radius: 0px;
 } */
 
-.search-area .ant-input-group-wrapper .ant-input-wrapper .ant-input-group-addon .ant-input-search-button {
-  border-start-end-radius: 0px;
-  border-end-end-radius: 0px;
-  border-radius: 0px;
+.search-area
+	.ant-input-group-wrapper
+	.ant-input-wrapper
+	.ant-input-group-addon
+	.ant-input-search-button {
+	border-start-end-radius: 0px;
+	border-end-end-radius: 0px;
+	border-radius: 0px;
 }
