--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -24,7 +24,7 @@
   padding-top: 15px;
   padding-bottom: 15px;
   width: 400px;
-  height: 680px;
+  /* height: 680px; */
   background: #ffffff;
 }
 
