--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,30 +1,54 @@
+.schema-loadmore-list .ant-list-item {
+	padding: 0 0 20px 0;
+	/* background-color: rgb(254, 254, 254); */
+}
+
+.schema-loadmore-list {
+	min-height: 350px;
+}
+
+.schema-loadmore-list .ant-btn {
+	border-radius: 0px;
+}
+
+.schema-loadmore-list .visible-more {
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.schema-loadmore-list .unvisible-more {
+	display: none;
+}
+
 .brain-form-page-title {
-  font-size: 20px;
-  font-weight: 400;
-  margin: 0 auto;
-  max-width: 1180px;
-  align-items: center;
-  text-align: center;
-  padding-bottom: 25px;
-}
-
-.brain-form-page-bg {
-  margin: 0 auto;
-  align-items: center;
-  width: 700px;
-  background: #ffffff;
-}
-
-.brain-form-page-main {
-  margin: 0 auto;
-  text-align: center;
-  align-items: center;
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  width: 400px;
-  /* height: 680px; */
-  background: #ffffff;
-}
-
+	font-size: 20px;
+	font-weight: 400;
+	margin: 0 auto;
+	max-width: 1180px;
+	align-items: center;
+	text-align: center;
+	padding-bottom: 25px;
+  }
+  
+  .brain-form-page-bg {
+	margin: 0 auto;
+	align-items: center;
+	width: 700px;
+	background: #ffffff;
+  }
+  
+  .brain-form-page-main {
+	margin: 0 auto;
+	text-align: center;
+	align-items: center;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	width: 400px;
+	/* height: 680px; */
+	background: #ffffff;
+  }
+  
+  
