--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 	justify-content: flex-start;
 	background-color: #f6f6f8;
 	min-height: 100vh;
+	border: 1px solid;
 }
 
 
@@ -27,8 +28,8 @@
 }
 
 .site-layout {
-	flex-grow: 2;
-	width: 70%;
+	flex-grow: 1;
+	width: 65%;
 	margin-left:auto;
 	margin-right: auto;
 }
