调整首页布局

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 
 .site-layout {
 	flex-grow: 1;
-	width: 65%;
+	width: 60%;
 	margin-left:auto;
 	margin-right: auto;
 }
@@ -51,7 +51,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 }
 
 .main-content {
