--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,8 @@
 
 .site-layout {
 	flex-grow: 1;
-	width: 70%;
-	margin-left:auto;
-	margin-right: auto;
+	width: 80vw;
+	margin: auto;
 }
 
 .App-header {
@@ -55,6 +54,7 @@
 }
 
 .main-content {
+	width: 60%;
 	/* min-height: 1680px; */
 	/* background-color: rgb(255, 255, 255); */
 }
