--- a/src/assets/AdminHeader.css
+++ b/src/assets/AdminHeader.css
@@ -3,12 +3,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    line-height: 100px;
+    line-height: var(--header-height);
     width: calc(100% - 2*var(--admin-content-margin));
     border:'1px solid red';
     margin:auto;
-}
-
-:root {
-    --admin-content-margin: 30px;
 }
