--- a/src/assets/HomeHeader.css
+++ b/src/assets/HomeHeader.css
@@ -3,7 +3,7 @@ header {
 	top: 0;
 	z-index: 2;
 	background: rgb(32, 32, 33);
-	height: 100px;
+    height: var(--header-height);
 	width: 100%;
 }
 
@@ -12,7 +12,7 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	line-height: 100px;
+	line-height: var(--header-height);
 
 	width: var(--app-content-width);
 	margin: auto;
