--- a/src/assets/SchemaDetail.css
+++ b/src/assets/SchemaDetail.css
@@ -1,5 +1,5 @@
 :root {
-    --schema-detail-font-size: 18px;
+    --schema-detail-font-size: 14px;
     --schema-detail-font-weight: 400;
     --schema-detail-line-height: 2;
 }
@@ -7,6 +7,18 @@
 #schema-detail-content {
     width: 100%;
     margin: auto;
+}
+
+#schema-detail-content .ant-card{
+    border-radius: 0;
+}
+
+#schema-detail-content .ant-card-head
+{
+    font-size: 18px;
+    border-radius: 0;
+    border-left: 4px solid #1677ff;
+
 }
 
 #schema-detail-content  .ant-tabs-tab,
