--- a/src/assets/CommonStyle.css
+++ b/src/assets/CommonStyle.css
@@ -62,7 +62,7 @@ input:-webkit-autofill {
 .main-form{
 	width: 500px;
 	margin: 2% auto 0 auto;
-
+	background-color: white;
 	border-radius: 4px;
 	display: flexbox;
 	flex-direction: column;
