--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-	--app-content-width: 70vw;
+	--app-content-width: 65vw;
 	--admin-content-margin: 30px;
 	--header-height: 100px;
 }
@@ -50,7 +50,7 @@
 }
 
 .App-link {
-	color: #61dafb;
+	/* color: #61dafb; */
 }
 
 .content {
@@ -66,7 +66,7 @@
 }
 
 .main-content {
-	width: 70%;
+	width: 65%;
 	/* min-height: 1680px; */
 	/* background-color: rgb(255, 255, 255); */
 }
