--- a/src/assets/SchemaCard.css
+++ b/src/assets/SchemaCard.css
@@ -1,8 +1,8 @@
 .schema-card {
 	width: 100%;
-	height: 220px;
+	min-height: 220px;
 	background-color: rgb(255, 255, 255);
-	padding: 12px 24px;
+	padding: 1% 2%;
 	-webkit-box-shadow: 0px 3px 3px #dedada;
 	-moz-box-shadow: 0px 3px 3px #dedada;
 	box-shadow: 0px 3px 3px #dedada;
@@ -19,10 +19,18 @@
 
 .schema-title {
 	float: left;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .schema-title .visible-icon {
 	color: #000;
+}
+
+.schema-title button{
+	padding: 0 0;
+	margin-left:5%;
 }
 
 .schema-title .unvisible-icon {
@@ -43,18 +51,15 @@
 }
 
 .schema-desc {
-	height: 100px;
+	min-height: 100px;
 	font-size: 14px;
 
 	display: -webkit-box;
 	overflow: hidden;
 
 	text-overflow: ellipsis;
-	 /* 弹性伸缩盒子模型显示 */
 	 display: -webkit-box;
-	 /* 限制在一个块级元素显示文本的行数 */
-	  -webkit-line-clamp: 4;
-	 /* 设置或检索伸缩盒对象的子元素的排列方式 */
+	  -webkit-line-clamp: 5;
 	 -webkit-box-orient: vertical;
 }
 .schema-footer {
@@ -80,17 +85,6 @@
 	
 }
 
-.company-info {
-	white-space: nowrap;
-    overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-.product-info {
-	white-space: nowrap;
-    overflow: hidden;
-	text-overflow: ellipsis;
-}
 
 .publish-time {
 	align-self: flex-end;
