--- a/src/assets/SchemaCard.css
+++ b/src/assets/SchemaCard.css
@@ -67,8 +67,8 @@
 	font-size: 14px;
 	color: rgb(134, 132, 132);
 	display: flex;
-	flex-direction: column;
-	/* justify-content: space-between; */
+	flex-direction: row;
+	justify-content: space-between;
 	/* align-items:flex-end; */
 }
 
@@ -80,13 +80,13 @@
 }
 .owner-info {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-between;
 	
 }
 
 
 .publish-time {
-	align-self: flex-start;
+	align-self: flex-end;
 }
 
